<resources>
    <string name="app_name">Backup Manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Backup Manager</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_disk">My Disk</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_local_files">Local Files</string>
    <string name="logout">Log out</string>
    <string name="title_activity_details">Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="file_settings">Properties</string>
    <string name="remove_all_files_from_backup">Remove all files from backup</string>
    <string name="warning_adv_settings">Warning! Changing these settings can affect application working properly.</string>
    <string name="server_ip">Server IP:</string>
    <string name="port">HTTP port:</string>
    <string name="tcp_port">TCP port:</string>
    <string name="save">Save</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="size">Size :</string>
    <string name="extension">Extension :</string>
    <string name="remote_path">Remote path :</string>
    <string name="local_path">Local path :</string>
    <string name="hash">Hash :</string>
    <string name="name">Name :</string>
    <string name="wifi_only">Backup occurs only when connected to Wi-Fi network</string>
    <string name="enable_backup">Enable backup</string>
    <string name="enable_disable_backup">Enable/Disable periodical backup of selected files and folders</string>
    <string name="backup_period">Backup period</string>
    <string name="backup_period_settings">Select how often backup happens</string>
    <string name="download">Download</string>
    <string name="properties">Properties</string>
    <string name="upload">Upload</string>
    <string name="add_to_backup">Add to backup</string>
    <string name="remove_from_backup">Remove from backup</string>
</resources>