<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_disk"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_disk" />
        <item
            android:id="@+id/nav_local_files"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_local_files" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>
</menu>