<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_disk">

    <fragment
        android:id="@+id/nav_disk"
        android:name="com.backupmanager.app.ui.disk.DiskFragment"
        android:label="@string/menu_disk"
        tools:layout="@layout/fragment_disk" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.backupmanager.app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_local_files"
        android:name="com.backupmanager.app.ui.localfiles.LocalFilesFragment"
        android:label="@string/menu_local_files"
        tools:layout="@layout/fragment_local_files" />

</navigation>